# rust-gear-book-playground

./: Cargo.toml  README.md
cli/samplecli/: Cargo.toml
cli/samplecli/src/: main.rs
gui/ui-demo/: Cargo.toml
gui/ui-demo/src/: main.rs
src/: futures.rs  lib.rs  main.rs  message_passing.rs  module_a.rs  module_b.rs  module_c.rs  practice_test.rs  share_thread.rs  tokio.rs
src/tests/: lib.rs
wasm/mandelbrot/: Cargo.toml  package-lock.json
wasm/mandelbrot/src/: lib.rs  logic.rs
wasm/numberplace/: Cargo.toml  LICENSE_MIT
wasm/numberplace/src/: lib.rs
web/todo/: Cargo.toml  Dockerfile
web/todo/templates/: index.html
