[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.3.0"
thiserror = "1.0.30"
askama = "0.10.5"
rusqlite = { version = "0.26.2", features=["bundled"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"
serde = { version = "1.0.126", features = ["derive"] }